feat: Add group invitation and expense parsing functionality
Introduces the ability to join groups via invitation codes and enhances the expense parsing API.

Includes routing for the new join group screen and adds `firebase-functions` and `firebase-admin` as dependencies. The `parse-expense` serverless function is now correctly implemented to handle expense parsing requests.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     "@tanstack/react-query": "https://aistudiocdn.com/@tanstack/react-query@^5.51.1",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.2"
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.2",
+    "firebase-functions": "https://aistudiocdn.com/firebase-functions@^6.4.0",
+    "firebase-admin": "https://aistudiocdn.com/firebase-admin@^13.5.0"
   }
 }
 </script>
